@@ -23,6 +23,7 @@
  22. Shopkeepers listing their own inventory can see amount of stock.
  23. WillQualify and Qualify commands now have UNIQUE argument.
  24. New INI entry: XPMOD, and changes to Prop_ModExperience also.
+ 25. Common Account menu now configurable (help/acctmenu.txt)
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
